--- a/frontend_panel/package.json
+++ b/frontend_panel/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.5.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.525.0",
+    "rc-progress": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
