--- a/frontend_panel/netlify.toml
+++ b/frontend_panel/netlify.toml
@@ -1,9 +1,8 @@
 [build]
-  base = "frontend_admin"
   command = "npm run build"
-  publish = "/dist"
+  publish = "dist"  # Remove the leading slash
 
-[[headers]]
-  for = "/*.js"
-  [headers.values]
-    "Content-Type" = "application/javascript"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
