--- a/frontend_panel/netlify.toml
+++ b/frontend_panel/netlify.toml
@@ -1,8 +1,9 @@
 [build]
+  base = "frontend_panel"
   command = "npm run build"
-  publish = "dist"  # Remove the leading slash
+  publish = "/dist"
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+[[headers]]
+  for = "/*.js"
+  [headers.values]
+    "Content-Type" = "application/javascript"
